--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -2,6 +2,7 @@
     --largura-padrao: 1460px;
     --cor-primaria: #3498db;
     --cor-secundaria: #2ecc71;
+    --cor-do-texto: black;
 }
 
 /* Estilos Gerais */
@@ -19,9 +20,17 @@ img {
     display: block;
 }
 
+.larguraPadrao {
+    max-width: var(--largura-padrao);
+    margin: 0 auto;
+}
+
+.corPrincipal {
+    background: var(--cor-primaria);
+}
+
 /* Estilo para o cabeçalho */
 .header {
-    background-color: var(--cor-primaria);
     padding: 15px;
     display: flex;
     justify-content: space-between;
@@ -29,7 +38,7 @@ img {
 }
 
 .header a {
-    color: white;
+    color: var(--cor-do-texto);
     text-decoration: none;
     font-size: 24px;
 }
@@ -46,7 +55,7 @@ img {
 }
 
 .options a {
-    color: white;
+    color: var(--cor-do-texto);
     text-decoration: none;
     font-size: 16px;
 }
@@ -80,8 +89,51 @@ img {
     margin: 10px;
 }
 
+
+.item {
+    position: relative;
+    flex: 1 1 145px;
+    margin: 10px;
+    overflow: hidden;
+}
+
+.item img {
+    width: 100%;
+    height: auto;
+}
+
+.item p {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    color: #fff;
+    margin: 0;
+    padding: 17px;
+    transform: translateY(0);
+    transition: transform 0.3s, text-decoration 0.3s;
+    text-decoration: underline transparent;
+    font-size: 1em;
+    max-width: 100%;
+}
+
+.item:hover p {
+    transform: translateY(-10px);
+    text-decoration: underline #fff;
+}
+
+@media (max-width: 768px) {
+    .item p {
+        font-size: 14px;
+    }
+}
+
 @media (max-width: 590px) {
     .flex > div {
         flex-basis: calc(50% - 20px);
+    }
+
+    .item p {
+        font-size: 18px;
     }
 }
