--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -161,6 +161,72 @@ img {
     cursor: pointer;
 }
 
+/*-- Bottom --*/
+.fundo-Branco {
+    background-color: #f8f9fa;
+    width: 100%;
+    padding: 20px; 
+  }
+  
+  .social-position {
+    position: absolute;
+    right: 0;
+    padding-top: 17px;
+    padding-right: 60px;
+  }
+
+/* -- Social Icons -- */
+.social-icons {
+    margin-top: 20px;
+  }
+  
+  .social-icons a {
+    margin-right: 10px;
+  }
+  
+  .social-icons img {
+    width: 30px;
+    height: 30px;
+  }
+
+/* bottom */
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.row {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.col {
+    width: 45%;
+    margin-bottom: 20px;
+}
+
+h4 {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.rosa {
+    color: #ff69b4;
+}
+
+p {
+    margin: 0;
+}
+
+@media (max-width: 768px) {
+    .col {
+        width: 100%;
+    }
+}
+
 
 @media (max-width: 768px) {
     .item p {
